bk_ida/gccida/g2/precondition_loop_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/precondition_loop_p/src/unroll.c:1864:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *mode) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/precondition_loop_p/src/unroll.c:1875:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/precondition_loop_p/src/unroll.c:1877:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/precondition_loop_p/src/unroll.c:1897:20: error: invalid suffix 'xmode' on integer constant
*mode = *(short *)0xmode; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/precondition_loop_p/src/unroll.c:1974:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[*( unsigned __int8 *)( *( ( _QWORD *)aux + 6) + 2LL)] == MODE_FLOAT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/precondition_loop_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/precondition_loop_p/src/unroll.c:1975:36: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| ( v14 = *( ( _QWORD *)aux + 4), mode_class_0[*( unsigned __int8 *)( v14 + 2)] == MODE_FLOAT) ) 
                                   ^~~~~~~~~~~~
                                   mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/precondition_loop_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/precondition_loop_p/src/unroll.c:2004:20: error: invalid suffix 'xmode' on integer constant
*mode = *(short *)0xmode; 
                   ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/precondition_loop_p/src/obj/unroll.o] Error 1
